# schema

./: .gitignore  .prettierrc  .rusty-hook.toml  .semver  Cargo.toml  README.md  build.sh  build_rs.sh  build_ts.sh  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml  metavalidation.yml  validation.yml
data/: booking.schema.json  itinerary.schema.json  receipt.schema.json  transit_route.location.updated.schema.json  transit_route.status.updated.schema.json
data_objects/: composite_receipt.json  composite_receipt.schema.json  merchant.schema.json  receipt.schema.json
data_objects/v0.1.0/: receipt.schema.json
events/: booking.schema.json  invoice.schema.json  itinerary.schema.json  receipt.schema.json  transit_route.location.updated.schema.json  transit_route.status.updated.schema.json
examples/itinerary/: car_rental.json  flight.json  lodging.json  rail.json  rideshare.json  service.json
examples/receipt/: ecommerce.json  flight.json  subscription.json
protocol_bindings/: register_receipt_request.schema.json  register_transaction_request.json
purchase_details/: receipt.schema.json
scripts/: lib.ts  require_top_level_fields.ts  validate_examples.ts  verify_booking_relaxes_requirements.ts  verify_invoice_is_alias.ts  verify_subschema.ts
src/: lib.rs  protocol.rs  receipt.rs
web/: receipt.ts  schema.ts
