[package]
name = "versa_unstable_schema"
version = "0.2.1"
edition = "2021"
description = "Versa Unstable Schema"
authors = ["Versa"]
license = "MIT"
documentation = "https://docs.versa.org"
homepage = "https://versa.org"
repository = "https://github.com/versa-protocol/schema"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
rusty-hook = "^0.11.2"
